add text and color in the first container having the row containing ping pong and make it look like what is in the guide

--- a/css/third.css
+++ b/css/third.css
@@ -1,7 +1,15 @@
 #first{
-
+background-color: 	#FFE4C4;
+text-align: center;
+height:400px;
+padding-top: 150px;
 
 }
+#word{
+font-size:500%;
+
+}
+
 #second{
 
 
