--- a/css/third.css
+++ b/css/third.css
@@ -1,7 +1,11 @@
 #first{
-background-image: url("/home/justus/Documents/thirdIP/cobblestone-earth-surface-granite-1029604.jpg");
+background-image: url("/home/justus/Documents/thirdIP/ball-game-macro-569986.jpg");
+background-repeat: no-repeat;
+bakground position:center;
+background-size: cover;
+
 text-align: center;
-height:400px;
+height:600px;
 padding-top: 150px;
 
 }
